# AdventOfCode2019

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt
common/: CMakeLists.txt  console_image.cpp  console_image.h  enumerate.h  find_optional.h  function_from_lambda.h  infix_ostream_iterator.h  multicall.h  n_comparator.h  read_file.cpp  read_file.h  test.cpp
common/test_resources/: file_02.txt  file_04.txt
day_01/: CMakeLists.txt  calculateFuelRequirement.cpp  calculateFuelRequirement.h  main.cpp  test.cpp
day_02/: CMakeLists.txt  main.cpp  test.cpp
day_03/: CMakeLists.txt  main.cpp  test.cpp  wire_distance.cpp  wire_distance.h
day_04/: CMakeLists.txt  main.cpp  secure_container.cpp  secure_container.h  test.cpp
day_05/: CMakeLists.txt  main.cpp  test.cpp
day_06/: CMakeLists.txt  input_test_02.txt  main.cpp  orbit_map.cpp  orbit_map.h  test.cpp
day_07/: CMakeLists.txt  amplifiers.cpp  amplifiers.h  main.cpp  test.cpp
day_08/: CMakeLists.txt  main.cpp  space_image.cpp  space_image.h  test.cpp
day_09/: CMakeLists.txt  main.cpp  test.cpp
day_10/: CMakeLists.txt  asteroids.cpp  asteroids.h  main.cpp  test.cpp
day_11/: CMakeLists.txt  PaintRobot.cpp  PaintRobot.h  main.cpp  test.cpp
day_12/: CMakeLists.txt  main.cpp  moons.cpp  moons.h  test.cpp
day_13/: CMakeLists.txt  arcade.cpp  arcade.h  main.cpp  test.cpp
day_14/: CMakeLists.txt  Contingent.cpp  Contingent.h  Rule.cpp  Rule.h  RuleSet.cpp  RuleSet.h  find_path_slow.cpp  find_path_slow.h  main.cpp  reaction.cpp  reaction.h  test.cpp
day_15/: CMakeLists.txt  Drone.cpp  Drone.h  main.cpp
day_16/: CMakeLists.txt  fft.cpp  fft.h  main.cpp
day_17/: CMakeLists.txt  ascii.cpp  ascii.h  main.cpp
day_18/: CMakeLists.txt  Direction.h  DistanceFunction.cpp  DistanceFunction.h  Graph.cpp  Graph.h  Image.cpp  Image.h  Tile.cpp  Tile.h  input_account_02_closed.txt  keylab.cpp  keylab.h  keywalk_slow.cpp  keywalk_slow.h  main.cpp
day_19/: CMakeLists.txt  Image.cpp  Image.h  main.cpp  tractor.cpp  tractor.h
day_20/: CMakeLists.txt  Direction.cpp  Direction.h  Graph.cpp  Graph.h  donut.cpp  donut.h  input_account_01.txt  main.cpp
day_21/: CMakeLists.txt  main.cpp  script_run.txt
day_22/: CMakeLists.txt  main.cpp
day_23/: CMakeLists.txt  main.cpp
day_24/: CMakeLists.txt  main.cpp
day_25/: CMakeLists.txt  main.cpp
intprogram/: CMakeLists.txt  Input.cpp  Input.h  Instruction.cpp  Instruction.h  InterProgramCommunication.cpp  InterProgramCommunication.h  Intprogram.cpp  Intprogram.h  Output.cpp  Output.h  Parameter.cpp  Parameter.h  int_types.h  test.cpp
