CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT( day_04 )

SET(TEST_PROJECT_NAME ${PROJECT_NAME}_test)
SET(EXE_PROJECT_NAME ${PROJECT_NAME}_exe)

INCLUDE_DIRECTORIES(
	../common
)

ADD_LIBRARY( ${PROJECT_NAME}
	secure_container.h
	secure_container.cpp
)

ADD_EXECUTABLE(${TEST_PROJECT_NAME}
	test.cpp
)

TARGET_LINK_LIBRARIES(${TEST_PROJECT_NAME}
	${PROJECT_NAME}
	common
	CONAN_PKG::boost_test
)

ADD_TEST(test_${TEST_PROJECT_NAME} ${TEST_PROJECT_NAME})

ADD_EXECUTABLE(${EXE_PROJECT_NAME}
	main.cpp
)

TARGET_LINK_LIBRARIES(${EXE_PROJECT_NAME}
	${PROJECT_NAME}
	common
)

SET_TARGET_PROPERTIES( ${PROJECT_NAME} ${EXE_PROJECT_NAME} ${TEST_PROJECT_NAME} PROPERTIES
	FOLDER ${PROJECT_NAME}
	ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}
	ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR}
	RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}
	RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR}
)