CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT( day_18 )


SET(EXE_PROJECT_NAME ${PROJECT_NAME}_exe)

INCLUDE_DIRECTORIES(
  ../common
)

SET(RESOURCE_FILES
  input_account_01_closed.txt
  input_account_01_open.txt
  input_account_02_closed.txt
  input_account_02_open.txt
)

ADD_LIBRARY( ${PROJECT_NAME}
	DistanceFunction.h
	DistanceFunction.cpp
	Graph.h
	Graph.cpp
	Image.h
	Image.cpp
	Tile.h
	Tile.cpp
	Direction.h
	Direction.cpp
  keylab.h
  keylab.cpp
	keywalk_slow.h
	keywalk_slow.cpp
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
  ${EIGEN_PKG}
  common
)


ADD_EXECUTABLE(${EXE_PROJECT_NAME}
  main.cpp

  ${RESOURCE_FILES}
)

TARGET_LINK_LIBRARIES(${EXE_PROJECT_NAME}
  ${PROJECT_NAME}
  ${EIGEN_PKG}
  common
)

SOURCE_GROUP( "Resources" FILES ${RESOURCE_FILES} )

SET_TARGET_PROPERTIES( ${PROJECT_NAME} ${EXE_PROJECT_NAME} ${TEST_PROJECT_NAME} PROPERTIES
	FOLDER ${PROJECT_NAME}
	ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}
	ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR}
	RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}
	RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR}
)

FOREACH(INPUT ${RESOURCE_FILES})
  GET_FILENAME_COMPONENT(FILENAME ${INPUT} NAME)
  CONFIGURE_FILE(${INPUT} "${CMAKE_CURRENT_BINARY_DIR}/${FILENAME}" COPYONLY)
ENDFOREACH()

