CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT( day_25 )

FIND_PACKAGE( Threads REQUIRED )

SET(EXE_PROJECT_NAME ${PROJECT_NAME}_exe)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libstdc++ -fno-limit-debug-info")

INCLUDE_DIRECTORIES(
  ../common
  ../intprogram
)

SET(RESOURCE_FILES
  input.txt
)

ADD_EXECUTABLE(${EXE_PROJECT_NAME}
  main.cpp
  ${RESOURCE_FILES}
)

TARGET_LINK_LIBRARIES(${EXE_PROJECT_NAME}
  common
  Intprogram
  Threads::Threads
)

SOURCE_GROUP( "Resources" FILES ${RESOURCE_FILES} )

SET_TARGET_PROPERTIES( ${EXE_PROJECT_NAME} PROPERTIES
  FOLDER ${PROJECT_NAME}
  ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}
  ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR}
  RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}
  RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR}
)

FOREACH(INPUT ${RESOURCE_FILES})
  GET_FILENAME_COMPONENT(FILENAME ${INPUT} NAME)
  CONFIGURE_FILE(${INPUT} "${CMAKE_CURRENT_BINARY_DIR}/${FILENAME}" COPYONLY)
ENDFOREACH()

