CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT( Intprogram )

SET(TEST_PROJECT_NAME ${PROJECT_NAME}_test)

INCLUDE_DIRECTORIES(
	../common
)

ADD_LIBRARY( ${PROJECT_NAME}
	Intprogram.h
	Intprogram.cpp
	Instruction.h
	Instruction.cpp
	Input.h
	Input.cpp
	Output.h
	Output.cpp
	InterProgramCommunication.h
	InterProgramCommunication.cpp
	Parameter.h
	Parameter.cpp
	int_types.h
)

ADD_EXECUTABLE(${TEST_PROJECT_NAME}
	test.cpp
)

TARGET_LINK_LIBRARIES(${TEST_PROJECT_NAME}
	${PROJECT_NAME}
	common
	CONAN_PKG::boost_test
)

ADD_TEST(test_${TEST_PROJECT_NAME} ${TEST_PROJECT_NAME})

SET_TARGET_PROPERTIES( ${PROJECT_NAME} ${TEST_PROJECT_NAME} PROPERTIES
	FOLDER ${PROJECT_NAME}
	ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}
	ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR}
	RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}
	RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR}
	)